set fixed header rows in tables, fixed scrollbar thumb

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,10 +104,8 @@ footer a {
     padding: 20px;
     margin-left: auto;
     margin-right: auto;
-}
-
-.thead {
-    background-color: #a4b6ba;
+    top: 0px;
+    z-index: auto;
 }
 
 #adminTitle {
@@ -125,8 +123,9 @@ footer a {
     background-color: #32444e;
 }
 
+
 #floor {
-    width: 100vh;
+    width: 150vh;
     max-height: 200px;
     overflow-y: scroll;
     margin: auto;
@@ -140,18 +139,25 @@ footer a {
 
 #floor::-webkit-scrollbar {
     width: 20px;
-    height:10px;
 }
 
 #floor::-webkit-scrollbar-track
 {
     background-color: rgba(90,90,90,.05);
     border-radius: 20px;
+    background-clip: content-box;
 
 }
 
 #floor::-webkit-scrollbar-thumb {
     background-image: url(/img/star.png);
-    background-repeat: no-repeat;
+    background-repeat: space;
     background-position: center;
+    max-height: 60px;
+}
+
+th {
+    background-color: #a4b6ba;
+    position: sticky;
+    top: 0;
 }
